--- a/Flock/PopupSubViewController.xib
+++ b/Flock/PopupSubViewController.xib
@@ -125,6 +125,10 @@ Friends</string>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v05-oK-1OS">
+                                    <rect key="frame" x="22" y="8" width="30" height="30"/>
+                                    <state key="normal" title="Button"/>
+                                </button>
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <constraints>
@@ -132,13 +136,17 @@ Friends</string>
                                 <constraint firstItem="Ea0-er-vvG" firstAttribute="centerX" secondItem="1uZ-a9-Iy8" secondAttribute="centerX" id="AKD-cU-fiv"/>
                                 <constraint firstItem="ALl-An-kFg" firstAttribute="centerX" secondItem="NNE-ZR-dyP" secondAttribute="centerX" id="ATD-04-bqK"/>
                                 <constraint firstItem="ALl-An-kFg" firstAttribute="centerY" secondItem="Ea0-er-vvG" secondAttribute="centerY" id="EYJ-3a-6qK"/>
+                                <constraint firstItem="v05-oK-1OS" firstAttribute="height" secondItem="1uZ-a9-Iy8" secondAttribute="height" id="F7v-WI-xgB"/>
                                 <constraint firstItem="KUN-6y-8qP" firstAttribute="centerX" secondItem="Fe7-aa-iik" secondAttribute="centerX" multiplier="1.25" id="LMH-CJ-wdg"/>
                                 <constraint firstItem="5Wa-S2-GyZ" firstAttribute="centerX" secondItem="KUN-6y-8qP" secondAttribute="centerX" id="PnL-kp-bxr"/>
                                 <constraint firstItem="1uZ-a9-Iy8" firstAttribute="centerX" secondItem="Fe7-aa-iik" secondAttribute="centerX" multiplier="0.25" id="R9i-Bd-pjr"/>
                                 <constraint firstItem="KUN-6y-8qP" firstAttribute="height" secondItem="1uZ-a9-Iy8" secondAttribute="height" id="TRx-3a-yKg"/>
                                 <constraint firstItem="saB-7d-IYz" firstAttribute="height" secondItem="1uZ-a9-Iy8" secondAttribute="height" id="U1l-pp-5Ty"/>
+                                <constraint firstItem="v05-oK-1OS" firstAttribute="centerY" secondItem="1uZ-a9-Iy8" secondAttribute="centerY" id="XlH-eM-Wpv"/>
+                                <constraint firstItem="v05-oK-1OS" firstAttribute="width" secondItem="1uZ-a9-Iy8" secondAttribute="width" id="cGi-cE-4JA"/>
                                 <constraint firstItem="NNE-ZR-dyP" firstAttribute="height" secondItem="1uZ-a9-Iy8" secondAttribute="height" id="dkQ-ZV-xMS"/>
                                 <constraint firstItem="RIT-KU-iKl" firstAttribute="centerY" secondItem="Ea0-er-vvG" secondAttribute="centerY" id="gQw-oO-7sF"/>
+                                <constraint firstItem="v05-oK-1OS" firstAttribute="centerX" secondItem="1uZ-a9-Iy8" secondAttribute="centerX" id="jmJ-TA-Fph"/>
                                 <constraint firstItem="KUN-6y-8qP" firstAttribute="centerY" secondItem="1uZ-a9-Iy8" secondAttribute="centerY" id="lZ3-P0-eqF"/>
                                 <constraint firstItem="ALl-An-kFg" firstAttribute="top" secondItem="NNE-ZR-dyP" secondAttribute="bottom" constant="6" id="mnf-j0-25I"/>
                                 <constraint firstItem="5Wa-S2-GyZ" firstAttribute="centerY" secondItem="Ea0-er-vvG" secondAttribute="centerY" id="nVD-QN-zXW"/>
